infrastructure/k8s-manifests/canary/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-application
  labels:
    app: rollout-patterns
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: canary-rollout
  template:
    metadata:
      labels:
        app: canary-rollout
    spec:
      containers:
        - name: core
          image: "oluwatunmiseolat/rollout-patterns:canary-v2"
          imagePullPolicy: Always
          ports:
            - containerPort: 3401
          livenessProbe:
            httpGet:
              path: /health
              port: 3401
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: { duration: 20s }
        - setWeight: 50
        - pause: { duration: 2m }
        - setWeight: 100
