infrastructure/k8s-manifests/canary/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: canary-rollout-svc
spec:
  selector:
    app: canary-rollout
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3401
