infrastructure/k8s-manifests/canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: canary.rollout.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary-rollout-svc
                port:
                  number: 80
